fixed the scroll bug by setting body overflow to hidden

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -23,6 +23,10 @@ html, body {
 	height: 100%;
 }
 
+body {
+	overflow: hidden;
+}
+
 ol, ul {
     list-style: none;
 }
